--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "engines": {
     "node": "12.x"
   },
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
     "test": "node test.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "ejs": "^2.5.6",
     "express": "^4.15.2"
   },
   "devDependencies": {
