--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.3.0",
   "description": "A sample Node.js app using Express 4",
   "engines": {
-    "node": "12.x"
+    "node": "14.x"
   },
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "test": "node test.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.15.2"
+    "dotenv": "^8.2.0",
+    "express": "^4.15.2",
+    "mongoose": "^5.9.17"
   },
   "devDependencies": {
+    "nodemon": "^2.0.4",
     "request": "^2.81.0",
     "tape": "^4.7.0"
   },
