--- a/package.json
+++ b/package.json
@@ -1,34 +1,16 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.3.0",
-  "description": "A sample Node.js app using Express 4",
-  "engines": {
-    "node": "14.x"
-  },
-  "main": "server.js",
-  "scripts": {
-    "start": "nodemon server.js",
-    "test": "node test.js"
-  },
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.15.2",
-    "mongoose": "^5.9.17"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.4",
-    "request": "^2.81.0",
-    "tape": "^4.7.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
-  },
-  "keywords": [
-    "node",
-    "heroku",
-    "express"
-  ],
-  "license": "MIT"
+	"scripts": {
+		"start": "nodemon server.js"
+	},
+	"dependencies": {
+		"dotenv": "^8.2.0",
+		"express": "^4.15.2",
+		"body-parser": "^1.19.0",
+		"mongoose": "^5.9.17"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.4",
+		"request": "^2.81.0"
+	},
+	"license": "MIT"
 }
