--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
 		"start": "nodemon server.js"
 	},
 	"dependencies": {
+		"body-parser": "^1.19.0",
 		"dotenv": "^8.2.0",
 		"express": "^4.15.2",
-		"body-parser": "^1.19.0",
+		"global": "^4.4.0",
+		"localtunnel": "^2.0.0",
 		"mongoose": "^5.9.17"
 	},
 	"devDependencies": {
